Add workflow_dispatch trigger to GitHub Actions

--- a/.github/workflow.yml
+++ b/.github/workflow.yml
@@ -3,6 +3,7 @@ name: Hardware Heroes Workflow
 on:
   push:
     branches: [ main ]
+     workflow_dispatch:
 jobs:
   hardware-detection:
     runs-on: ubuntu-latest
